# Gaggle

./: .env.example  .gitignore  Cargo.toml  Dockerfile.cross  PROJECT_STATUS_20260426_DESIGN_SYSTEM.txt  PROJECT_STATUS_LOG.txt  README.md  UPDATE_LOG.md
.cargo/: config.toml
deploy/: gaggle.service  setup-https.sh
deploy/nginx/: gaggle.conf
docs/: PROJECT.md  PROJECT_EN.md  SPEC.md
examples/: openclaw-adapter.ts
frontend/: ARCHITECTURE_SPEC.md  BROWSER_COMPATIBILITY_REPORT.md  CHANGELOG_PHASE2.md  DESIGN_SPEC_V2.md  DESIGN_SYSTEM_GUIDE.md  INTERACTION_FLOW.md  MAINTENANCE_GUIDE.md  PERFORMANCE_REPORT.md  UPDATE_LOG.md  UX_TEST_REPORT.md  VISUAL_REGRESSION_CHECKLIST.md  app.js  console.html  design-system.css  design-tokens.css  design-tokens.json  docs-advanced.html  docs-agent.html  docs-api.html  docs-hermes.html  docs-rules.html  docs-sdk.html  docs-ws.html  docs.html  i18n.js  index.html  landing-bg.js  style.css  theater.html
scripts/: always_on_buyer.py  always_on_seller.py  build-in-docker.sh  build-linux.sh  consumer_agent.py  deploy-ecs.sh  gaggle_agent_base.py  hermes_consumer.py  multi_party_test.py  provider_agent.py  test-e2e.sh  test-hermes.py  test_offline_queue.py
sdk/python/gaggle-sdk/: README.md  pyproject.toml
sdk/python/gaggle-sdk/examples/: quickstart.py  ws_agent.py
sdk/python/gaggle-sdk/src/gaggle/: __init__.py  _agent.py  _client.py  _heartbeat.py  _offline.py  _reconnect.py  _ws.py  exceptions.py
sdk/python/gaggle-sdk/src/gaggle/types/: __init__.py  _enums.py  _events.py  _models.py
sdk/python/gaggle-sdk/tests/: conftest.py
sdk/python/gaggle-sdk/tests/integration/: test_ask_reply.py
sdk/python/gaggle-sdk/tests/unit/: test_client.py  test_exceptions.py  test_retry.py
src/: config.rs  error.rs  lib.rs  main.rs
src/agents/: auth.rs  mod.rs  registry.rs  types.rs
src/api/: event_queue.rs  health.rs  middleware.rs  mod.rs  openclaw.rs  rest.rs  routes.rs  trace.rs  webhook.rs  ws.rs
src/api/rest/: mod.rs  rest_agents.rs  rest_institution.rs  rest_market.rs  rest_spaces.rs
src/discovery/: mod.rs  store.rs  types.rs
src/execution/: mod.rs  store.rs  types.rs
src/marketplace/: mod.rs  store.rs  types.rs
src/negotiation/: coalition.rs  crypt.rs  delegation.rs  message.rs  mod.rs  proposal.rs  recruitment.rs  rules.rs  session.rs  shared_state.rs  space.rs  subspace.rs  visibility.rs
src/reputation/: calculator.rs  mod.rs  store.rs  types.rs
src/solana/: evidence.rs  mod.rs
src/templates/: data.rs  mod.rs
src/users/: mod.rs  store.rs  types.rs
tests/: api_integration.rs  ws_integration.rs
tests/common/: mod.rs
