[package]
name = "gaggle"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Solana
solana-client = "1.18"
solana-sdk = "1.18"

# Cryptography
aes-gcm = "0.9"
sha2 = "0.9"
aead = "0.4"
rand = "0.8"
generic-array = "0.14"
typenum = "1"
argon2 = "0.5"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
dashmap = "6"

# HTTP client (webhook delivery)
reqwest = { version = "0.12", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Base64
base64 = "0.21"
