[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaggle-sdk"
version = "0.1.0"
description = "Python SDK for Gaggle — Agent commercial network platform"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.25",
    "websockets>=12.0",
    "pydantic>=2.0",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gaggle"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a live Gaggle server",
]
