[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaggle-sdk"
version = "0.1.0"
description = "Python SDK for Gaggle — Agent commercial network platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["gaggle", "agent", "commerce", "a2a", "negotiation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.25",
    "websockets>=12.0",
    "pydantic>=2.0",
    "aiosqlite>=0.19",
]

[project.urls]
Homepage = "https://github.com/gaggle-net/gaggle"
Repository = "https://github.com/gaggle-net/gaggle"
Documentation = "https://github.com/gaggle-net/gaggle/tree/main/sdk/python/gaggle-sdk"
"Bug Tracker" = "https://github.com/gaggle-net/gaggle/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gaggle"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a live Gaggle server",
]
